// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aircraft draws_id_matrix assume_friend 1`] = `
<canvas
  data-snapshot-image="47f76b1092d225154fa10bbd5ddb4404f1ea96c716d6c01321c3082a4985e1bd754ffa08a1ee31bc4ed50237272f2348e9222e9a8f9397d60bd7ab09915ec8ee"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix hostile 1`] = `
<canvas
  data-snapshot-image="4d18280d8e114be8607904fb76205178d829a326c89aefbe16b91343a0f2bb85a1e3ee54bd7e5e7ee4c1a0f261512c36f0ddf6be1ef5cae8c3444bf843b85058"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix neutral 1`] = `
<canvas
  data-snapshot-image="712facdaae6528f8bc951932c758a4f78679d0d98b7f449499f09321fcdac72ddcf8ae9aa2e73b910b79036090fbe38e04fabf4d6779174627b83352987146df"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix suspect 1`] = `
<canvas
  data-snapshot-image="a2b36bb0432d9fc7e60fb36fffb1da53e5979cd84d2a6fe5396cb178a9593c4395e5b58273f2621aa58c38dd1258bed70839676609ef0fab2a4652595a1ef1d0"
  height="30"
  width="10"
/>
`;
